# HIPPT---Agency-First-Ppt-Maker

./: .gitignore  CLAUDE.md  Dockerfile  Justfile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: presenter.md
baselines/carecost-79pct/: README.md  carecost-competitive-slides-editable.pptx  carecost-slides-batch2-editable.pptx  slide-business-model-v1.html  slide-business-model-v2.html  slide-competitive-landscape-v1.html  slide-competitive-landscape-v2.html  slide-market-v1-arc.html  slide-market-v1.html  slide-market-v2.html  slide-market-v3.html  slide-why-now-v1.html  (+4 more)
benchmarks/: bcg-benchmark.md
config/: layout-extraction.yaml  pptx-quality.yaml
docs/: ARCHITECTURE.md  BACKLOG.md  FINAL_PLAN.md  MEGAPLAN.md  MODULES.md  PIPELINE.md  PRINCIPLES.md  SCORING.md  decisions.md
errata/: presentation_design.md
examples/: sample-slides.json
hippt/: __init__.py  analyze_pptx.py  assemble_sidecar.py  design_tokens.py  extract_layouts.py  html_to_pptx.py  layout_select.py  layout_utils.py  pptx_fidelity.py  pptx_to_layout.py  pptx_to_tokens.py  review_cockpit.py  slides_to_pptx.py
layouts/: L-CLOSE-001.yaml  L-DATA-001.yaml  L-ERA-001.yaml  L-EXEC-001.yaml  L-GRID-001.yaml  L-NEWS-001.yaml  L-PROOF-001.yaml  L-RADIAL-001.yaml  L-STAT-001.yaml  L-TABLE-001.yaml  L-TITLE-001.yaml  L-VISION-001.yaml  index.yaml
schemas/: schema-extraction.yaml  schema-layout.yaml
templates/: presentation-components.md
tests/: conftest.py  test_design_tokens.py  test_e2e_smoke.py  test_html_to_pptx.py  test_layout_assertions.py  test_layout_select.py
(+126 files in other folders)
